@@ -199,6 +199,9 @@ Extension Modules
 Library
 -------
 
+- Patch #1192590: Fix pdb's "ignore" and "condition" commands so they trap
+  the IndexError caused by passing in an invalid breakpoint number.
+
 - Bug #1531963: Make SocketServer.TCPServer's server_address always
   be equal to calling getsockname() on the server's socket. Fixed by patch
   #1545011.
